<resources>
    <string name="app_name">Android Geolocation</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_location_details">Details</string>

    <string name="label_gps">GPS</string>
    <string name="label_mls">MLS</string>
    <string name="header_encrypted_mode">Secure mode.\nOnly encrypted data is displayed.</string>

    <string name="default_location_detail_title">Date and Time</string>
    <string name="label_capture_time">Capture timestamp</string>
    <string name="label_gps_coordinates">GPS coordinates</string>
    <string name="label_mls_coordinates">MLS coordinates</string>
    <string name="label_gps_accuracy">GPS accuracy</string>
    <string name="label_mls_accuracy">MLS accuracy</string>
    <string name="label_mls_parameters">MLS parameters</string>
    <string name="label_diff_gps_mls">Difference MLS / GPS</string>
    <string name="label_meters">\ meters</string>

    <string name="snackbar_empty"></string>
    <string name="snackbar_deleted_location">Deleted Location!</string>
    <string name="snackbar_sent_location">Sent Location!</string>
    <string name="snackbar_permission_error">Could not get location! Please restart app to check permissions.</string>
    <string name="snackbar_loading_location">A new location report is already loading! Please wait for completion</string>
    <string name="snackbar_gps_provider_error">GPS Provider not enabled! Please check if GPS is turned on.</string>
    <string name="snackbar_no_gps_or_wifi_info_found">No CellTower of Wifi-Accesspoint-Info could be found.</string>
    <string name="snackbar_network_provider_error">Location Services not enabled! Please check if Location is turned on</string>
    <string name="snackbar_security_already_enabled">You are currently already in security mode!</string>
    <string name="snackbar_security_error_connecting">Could not connect to encrypted database. Please check password!</string>
    <string name="snackbar_security_empty_password">Password field is empty. Please enter a password!</string>
    <string name="snackbar_internet_error">Could not create new location report. Please check your internet connectivity!</string>

    <string name="menu_enable_security">Enable Security</string>

    <string name="pop_up_heading">Security</string>
    <string name="pop_up_password">Password</string>
    <string name="pop_up_cancel">Cancel</string>
    <string name="pop_up_encrypt">Enable Security</string>
    <string name="pop_up_warning">All data which is saved after enabling security is stored in an encrypted database. After exiting, it can only be viewed after enabling security. CHANGING THE PASSWORD IS NOT POSSIBLE!\n\nAll data saved outside of security mode will remain unencrypted and will not be visible in security mode.</string>

    <string name="database_name">Locations.db</string>
    <string name="encrypted_database_name">encryptedLocations.db</string>
</resources>
