<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="vm"
            type="at.tuwien.android_geolocation.viewmodel.location.EnableSecurityViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="at.tuwien.android_geolocation.view.ui.location.LocationActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/list_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="?attr/homeAsUpIndicator"
                app:navigationOnClickListener="@{() -> vm.backClick()}"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/app_name">

            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorLightGray">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:orientation="vertical"
                    android:padding="@dimen/item_content_padding">

                    <TextView
                        android:id="@+id/heading_popup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pop_up_heading"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/label_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pop_up_password" />

                    <EditText
                        android:id="@+id/txt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pop_up_warning" />

                    <Button
                        android:id="@+id/btn_security"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pop_up_encrypt" />

                    <Button
                        android:id="@+id/btn_cancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/secondaryLightColor"
                        android:onClick="@{() -> vm.cancelEnableSecurity()}"
                        android:text="@string/pop_up_cancel" />
                </LinearLayout>
            </ScrollView>

        </FrameLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
