<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="at.tuwien.android_geolocation.viewmodel.location.LocationListViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="at.tuwien.android_geolocation.view.ui.location.LocationList">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/list_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/app_name">

                <ProgressBar
                    android:id="@+id/creationProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/colorLightGray"
                    android:padding="8dp"
                    android:visibility="@{vm.progressBar ? View.VISIBLE : View.GONE}" />

            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/header_secure_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorLightGray"
                    android:padding="@dimen/item_content_padding"
                    android:text="@string/header_encrypted_mode"
                    android:textAlignment="center"
                    android:visibility="@{vm.secureModeEnabled ? View.VISIBLE : View.GONE}" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/item_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@{vm.items}"
                    app:layoutManager="LinearLayoutManager"
                    app:layout_anchor="@+id/frameLayout"
                    app:layout_anchorGravity="center">

                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorLightGray"
                android:visibility="@{vm.securityPopupVisibility ? View.VISIBLE : View.GONE}">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:orientation="vertical"
                    android:padding="@dimen/item_content_padding">

                    <TextView
                        android:id="@+id/heading_popup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pop_up_heading"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/label_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pop_up_password" />

                    <EditText
                        android:id="@+id/txt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pop_up_warning" />

                    <Button
                        android:id="@+id/btn_security"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pop_up_encrypt" />

                    <Button
                        android:id="@+id/btn_cancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/secondaryLightColor"
                        android:onClick="@{() -> vm.cancelEnableSecurity()}"
                        android:text="@string/pop_up_cancel" />
                </LinearLayout>
            </ScrollView>

        </FrameLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:backgroundTint="@color/secondaryColor"
            android:backgroundTintMode="src_atop"
            android:onClick="@{() -> vm.fabClick()}"
            android:src="@drawable/ic_my_location_white"
            android:visibility="@{vm.securityPopupVisibility ? View.GONE : View.VISIBLE}"
            app:fabSize="auto"
            app:tint="@color/primaryTextColor" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
