<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="at.tuwien.geolocation_android.LocationDetails" >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/default_location_detail_title"
                app:navigationIcon="?attr/homeAsUpIndicator" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/item_detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/item_content_padding"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/label_gps_coodinates"
                    style="@android:style/Widget.TextView.PopupMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_gps_coordinates" />

                <TextView
                    android:id="@+id/txt_gps_coodinates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/item_seperator_margin"
                android:layout_marginBottom="@dimen/item_seperator_margin"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/label_mls_coordinates"
                    style="@android:style/Widget.TextView.PopupMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_mls_coordinates" />

                <TextView
                    android:id="@+id/txt_mls_coordinates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/item_seperator_margin"
                android:layout_marginBottom="@dimen/item_seperator_margin"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/label_diff_gps_mls"
                    style="@android:style/Widget.TextView.PopupMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_diff_gps_mls" />

                <TextView
                    android:id="@+id/txt_diff_gps_mls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/item_seperator_margin"
                android:layout_marginBottom="@dimen/item_seperator_margin"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/label_gps_accuracy"
                    style="@android:style/Widget.TextView.PopupMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_gps_accuracy" />

                <TextView
                    android:id="@+id/txt_gps_accuracy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/item_seperator_margin"
                android:layout_marginBottom="@dimen/item_seperator_margin"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/label_mls_accuracy"
                    style="@android:style/Widget.TextView.PopupMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_mls_accuracy" />

                <TextView
                    android:id="@+id/txt_mls_accuracy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/item_seperator_margin"
                android:layout_marginBottom="@dimen/item_seperator_margin"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/label_mls_parameters"
                    style="@android:style/Widget.TextView.PopupMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_mls_parameters" />

                <TextView
                    android:id="@+id/txt_mls_parameters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|start"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/secondaryColor"
        android:backgroundTintMode="src_atop"
        android:src="@mipmap/baseline_delete_forever_white_24"
        app:tint="@color/primaryTextColor"
        app:fabSize="auto"
        app:layout_anchor="@+id/item_detail_container"
        app:layout_anchorGravity="top|end" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>